fix: input color in dark mode visible

--- a/app/dashboard/src/index.css
+++ b/app/dashboard/src/index.css
@@ -54,7 +54,7 @@
 		--popover: var(--background);
 		--popover-foreground: var(--foreground);
 		--border: 0 0% 18%;
-		--input: 240 2% 11.5%;
+		--input: 240 2% 16.5%;
 		--input-placeholder: 0 0 30%;
 		--primary: 216 46% 53%;
 		--primary-foreground: 0 0% 5%;
